@@ -1,10 +1,13 @@
 package com.thienpm.askify.api.service.question;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.thienpm.askify.api.dto.request.CreateQuestionRequest;
+import com.thienpm.askify.api.dto.request.UpdateQuestionRequest;
 import com.thienpm.askify.api.dto.response.QuestionResponse;
 import com.thienpm.askify.api.entity.Question;
 import com.thienpm.askify.api.entity.Tag;
@@ -31,7 +34,7 @@ public class QuestionServiceImpl implements QuestionService {
             String tagName = tag.toLowerCase().trim().replaceAll("\\s+", "-");
             return tagRepository.findByName(tagName)
                     .orElseGet(() -> tagRepository.save(Tag.builder().name(tagName).build()));
-        }).toList();
+        }).collect(Collectors.toList());
 
         // Tao question
         Question question = Question.builder()
@@ -51,6 +54,34 @@ public class QuestionServiceImpl implements QuestionService {
     public QuestionResponse getQuestionById(Integer questionId) {
         Question question = questionRepository.findById(questionId)
                 .orElseThrow(() -> new AppException(ErrorCode.QUESTION_NOT_FOUND));
+
+        return questionMapper.toResponse(question);
+    }
+
+    @Transactional
+    @Override
+    public QuestionResponse updateQuestion(Integer questionId, UpdateQuestionRequest questionRequest,
+            CustomUserDetails userDetails) {
+        // Kiem tra question
+        Question question = questionRepository.findById(questionId)
+                .orElseThrow(() -> new AppException(ErrorCode.QUESTION_NOT_FOUND));
+        // Kiem tra user
+        if (!question.getUser().getId().equals(userDetails.getUser().getId())) {
+            throw new AppException(ErrorCode.FORBIDDEN);
+        }
+
+        // Xử lý tags
+        List<Tag> tags = questionRequest.getTags().stream().map(tag -> {
+            String tagName = tag.toLowerCase().trim().replaceAll("\\s+", "-");
+            return tagRepository.findByName(tagName)
+                    .orElseGet(() -> tagRepository.save(Tag.builder().name(tagName).build()));
+        }).collect(Collectors.toList());
+
+        // update
+        question.setTags(tags);
+        question.setTitle(questionRequest.getTitle());
+        question.setContent(questionRequest.getContent());
+        questionRepository.save(question);
 
         return questionMapper.toResponse(question);
     }
